[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/img/enemies/elite.png" type="Texture" id=1]
[ext_resource path="res://src/characters/enemies/Elite.gd" type="Script" id=2]
[ext_resource path="res://src/characters/bullets/EnemyBullet.tscn" type="PackedScene" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="Elite" type="Area2D"]
position = Vector2( 553, 776 )
script = ExtResource( 2 )
enemy_bullet_scene = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.20001, 0.299988 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -534.2, -179.7 )
polygon = PoolVector2Array( 532, 89, 386, 210, 386, 269, 529, 280, 680, 267, 682, 213 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -11.0001, 359 )
scale = Vector2( -53.66, 112.785 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="area_entered" from="." to="." method="_on_Elite_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
